# Drag_Conveyor

./: .gitignore  CLAUDE.md  README.md  local_defects_feature_spec.md  pyproject.toml
config/: base_profile.json
drag_conveyor/: __init__.py  benchmark.py  calibration_runner.py  camera_io.py  camera_worker.py  cli.py  demo_video.py  inference_worker.py  logger_worker.py  mapping.py  measure.py  packaging.py  pipeline_core.py  pipeline_worker.py  rules.py  runtime.py  runtime_ids.py  state_machine.py  tracking.py  trigger.py  video_io.py  worker_status.py  yolo_seg_postprocess.py
drag_conveyor/acceptance/: __init__.py
drag_conveyor/app/: __init__.py  batch.py  cli.py  main.py  paths.py  runtime_controller.py  runtime_store.py  state.py
drag_conveyor/calibration/: __init__.py  _core.py  baseline.py
drag_conveyor/camera/: __init__.py  core.py  types.py  worker.py
drag_conveyor/config/: __init__.py  _core.py  loader.py  migration.py  schema.py  validator.py
drag_conveyor/inference/: __init__.py  _core.py  diagnostics.py  engine.py  onnx_engine.py  preprocess.py  worker.py  yolo_seg_postprocess.py
drag_conveyor/inspection_modes/: __init__.py  average_ratio.py
drag_conveyor/logging/: __init__.py  core.py  logger_worker.py
drag_conveyor/ui/: __init__.py  (+6 more)
server/: .env.example  db.py  main.py  path_bootstrap.py  r2.py  settings.py  start.sh  test.py  update_cors.py  worker.py
tests/: test_average_ratio_mode.py  test_batch_local_defects.py  test_local_defects.py  test_postprocess_config.py  test_profile_rules.py  test_server_worker.py  test_snapshot_output.py
(+11 files in other folders)
