[project]
name = "drag-conveyor"
version = "0.1.0"
description = "White bar inspection runtime for drag conveyor defect screening."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.24",
    "fastapi>=0.115.0",
    "onnx>=1.21.0",
    "onnxruntime-gpu>=1.26.0",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["drag_conveyor*", "acceptance*"]
